; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_gic_v3.c_gic_v3_redist_wake.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_gic_v3.c_gic_v3_redist_wake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gic_v3_softc = type { i32 }

@GICR_WAKER = common dso_local global i32 0, align 4
@GICR_WAKER_PS = common dso_local global i32 0, align 4
@GICR_WAKER_CA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Could not wake Re-Distributor for CPU%u\00", align 1
@cpuid = common dso_local global i32 0, align 4
@bootverbose = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [30 x i8] c"CPU%u Re-Distributor woke up\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gic_v3_softc*)* @gic_v3_redist_wake to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gic_v3_redist_wake(%struct.gic_v3_softc* %0) #0 {
  %2 = alloca %struct.gic_v3_softc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.gic_v3_softc* %0, %struct.gic_v3_softc** %2, align 8
  store i64 1000000, i64* %4, align 8
  %5 = load %struct.gic_v3_softc*, %struct.gic_v3_softc** %2, align 8
  %6 = load i32, i32* @GICR_WAKER, align 4
  %7 = call i32 @gic_r_read(%struct.gic_v3_softc* %5, i32 4, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @GICR_WAKER_PS, align 4
  %9 = xor i32 %8, -1
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* %3, align 4
  %12 = load %struct.gic_v3_softc*, %struct.gic_v3_softc** %2, align 8
  %13 = load i32, i32* @GICR_WAKER, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @gic_r_write(%struct.gic_v3_softc* %12, i32 4, i32 %13, i32 %14)
  br label %16

16:                                               ; preds = %32, %1
  %17 = load %struct.gic_v3_softc*, %struct.gic_v3_softc** %2, align 8
  %18 = load i32, i32* @GICR_WAKER, align 4
  %19 = call i32 @gic_r_read(%struct.gic_v3_softc* %17, i32 4, i32 %18)
  %20 = load i32, i32* @GICR_WAKER_CA, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %33

23:                                               ; preds = %16
  %24 = call i32 @DELAY(i32 1)
  %25 = load i64, i64* %4, align 8
  %26 = add i64 %25, -1
  store i64 %26, i64* %4, align 8
  %27 = icmp eq i64 %25, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %23
  %29 = load i32, i32* @cpuid, align 4
  %30 = call i32 @PCPU_GET(i32 %29)
  %31 = call i32 @panic(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %28, %23
  br label %16

33:                                               ; preds = %16
  %34 = load i64, i64* @bootverbose, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %43

36:                                               ; preds = %33
  %37 = load %struct.gic_v3_softc*, %struct.gic_v3_softc** %2, align 8
  %38 = getelementptr inbounds %struct.gic_v3_softc, %struct.gic_v3_softc* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* @cpuid, align 4
  %41 = call i32 @PCPU_GET(i32 %40)
  %42 = call i32 @device_printf(i32 %39, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %41)
  br label %43

43:                                               ; preds = %36, %33
  ret i32 0
}

declare dso_local i32 @gic_r_read(%struct.gic_v3_softc*, i32, i32) #1

declare dso_local i32 @gic_r_write(%struct.gic_v3_softc*, i32, i32, i32) #1

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @panic(i8*, i32) #1

declare dso_local i32 @PCPU_GET(i32) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
